--- a/1_1_Explore_the_Problem_with_Immutable_vs_Mutable_Objects.ipynb
+++ b/1_1_Explore_the_Problem_with_Immutable_vs_Mutable_Objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9QF/HDLTAIS63YDDKecRU",
+      "authorship_tag": "ABX9TyN2Hh7L6Fu2wCkPhh+/U/rG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## My understanding of the ways Python variables behave\n",
-        "When you assign one variable to another you create a reference to the original object. Depending on if the object type of the original, when you then modify the new variable it will either affect the original in the case of mutable objects, or it create a new object in the case of immutable objects.\n",
+        "## Understanding the ways Python variables behave\n",
+        "**Immutable types (int, float, str, tuple)**: When you assign an immutable object to a new variable, both variables point to the same object. If you modify the new variable, it creates a new object and does not affect the original variable.\n",
         "\n",
-        "Mutable: list, dictionary\n",
-        "\n",
-        "Immutable: int, float, string, tuple"
+        "**Mutable types (list, dict)**: When you assign a mutable object to a new variable, both variables point to the same object. If you modify the new variable, it affects the original variable because they share the same object. However, if you reassign the new variable to a new object, it does not affect the original variable."
       ],
       "metadata": {
         "id": "Ey9fp81gYiKW"
@@ -161,16 +159,20 @@
         "\n",
         "lst_b[0] = 0\n",
         "\n",
-        "print(f\"After modification:\\nlst_a = {lst_a}\\nlst_b = {lst_b}\")"
+        "print(f\"After modification:\\nlst_a = {lst_a}\\nlst_b = {lst_b}\\n\")\n",
+        "\n",
+        "lst_b = [4, 3, 2, 1]\n",
+        "\n",
+        "print(f\"After setting to new object:\\nlst_a = {lst_a}\\nlst_b = {lst_b}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sXNDTBh1OUpF",
-        "outputId": "f37f18c6-7984-4215-b0a0-6394b41a0a07"
+        "outputId": "a966533f-558c-46ba-af2b-9f5e8fc4fa50"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +184,11 @@
             "\n",
             "After modification:\n",
             "lst_a = [0, 2, 3, 4]\n",
-            "lst_b = [0, 2, 3, 4]\n"
+            "lst_b = [0, 2, 3, 4]\n",
+            "\n",
+            "After setting to new object:\n",
+            "lst_a = [0, 2, 3, 4]\n",
+            "lst_b = [4, 3, 2, 1]\n"
           ]
         }
       ]
@@ -195,18 +201,23 @@
         "\n",
         "print(f\"Before modification:\\ntpl_a = {tpl_a}\\ntpl_b = {tpl_b}\\n\")\n",
         "\n",
+        "try:\n",
+        "  tpl_b[0] = 42\n",
+        "except Exception as e:\n",
+        "  print(f\"Error: {e}.\\nCannot modify an element of tuple in this way as it is an immutable object.\\n\")\n",
+        "\n",
         "tpl_b = (4, 5, 6)\n",
         "\n",
-        "print(f\"After modification:\\ntpl_a = {tpl_a}\\ntpl_b = {tpl_b}\")"
+        "print(f\"After setting to new object:\\ntpl_a = {tpl_a}\\ntpl_b = {tpl_b}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GQ06NF0eOtu2",
-        "outputId": "57cfe52e-c11e-4a48-d27d-e89472b3cb5a"
+        "outputId": "dcd832ec-b190-46d7-93a3-395ecc7fa2a3"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +227,10 @@
             "tpl_a = (1, 2, 3)\n",
             "tpl_b = (1, 2, 3)\n",
             "\n",
-            "After modification:\n",
+            "Error: 'tuple' object does not support item assignment.\n",
+            "Cannot modify an element of tuple in this way as it is an immutable object.\n",
+            "\n",
+            "After setting to new object:\n",
             "tpl_a = (1, 2, 3)\n",
             "tpl_b = (4, 5, 6)\n"
           ]
@@ -233,16 +247,20 @@
         "\n",
         "dict_b[\"a\"] = 0\n",
         "\n",
-        "print(f\"After modification:\\ndict_a = {dict_a}\\ndict_b = {dict_b}\\n\")"
+        "print(f\"After modification:\\ndict_a = {dict_a}\\ndict_b = {dict_b}\\n\")\n",
+        "\n",
+        "dict_b = {\"a\": 2, \"b\": 1}\n",
+        "\n",
+        "print(f\"After setting to new object:\\ntpl_a = {dict_a}\\ntpl_b = {dict_b}\")"
       ],
       "metadata": {
         "id": "hfUmyDpAUqf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "626cb802-af34-428c-e63f-0204793aaa02"
+        "outputId": "6d0976ec-2e13-484d-d3f4-917b43d2d6b5"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +273,10 @@
             "After modification:\n",
             "dict_a = {'a': 0, 'b': 2}\n",
             "dict_b = {'a': 0, 'b': 2}\n",
-            "\n"
+            "\n",
+            "After setting to new object:\n",
+            "tpl_a = {'a': 0, 'b': 2}\n",
+            "tpl_b = {'a': 2, 'b': 1}\n"
           ]
         }
       ]
